<resources>
    <string name="app_name">Local Market</string>
    <string name="insert_email">Correo electronico...</string>
    <string name="insert_pwd">Password...</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing up</string>
    <string name="vendedor">¿Registrarse como vendedor?</string>


</resources>
